# contextuality

./: .gitignore  README.md  model.py  pyproject.toml  scenario.py  setup.py
contextuality/: __init__.py  functions.py  model.py  scenario.py  utils.py
test/: test_functions.py  test_model.py  test_scenario.py
tests/: test_scenario.py
